--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <h2>Introduction</h2>
+    <p>So here is a little introduction to my webpage where I will write it in HTML and use a little of Javascript as the backend</p>
+
     <script src="index.js"></script>
 </body>
 </html>
